basic skeleton and outlining complete

--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600&display=swap');
 :root {
 /* ### Primary */
 
@@ -24,4 +25,31 @@ body{
     width:100wh;
     display:flex;
     justify-content:center;
+    align-items:center;
+    min-width:375px;
+    font-family: 'Josefin Sans', sans-serif;
+
+}
+.container{
+    height:25rem;
+    width:50rem;
+    display:flex;
+    justify-content:space-around;
+    align-items:center;
+    font-family:'Josefin Sans';
+    background-color: linear-gradient(135deg, from hsl(0, 0%, 100%), to hsl(0, 100%, 98%)),
+    linear-gradient(135deg, from hsl(0, 80%, 86%), to hsl(0, 74%, 74%));
+}
+.message{
+    height:25rem;
+    width:30rem;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    text-align:center;
+}
+.image > img{
+    height:25rem;
+    width:16rem;
+
 }
