--- a/style.css
+++ b/style.css
@@ -79,11 +79,16 @@ body{
     font-weight: 600;
     line-height: 1.5;
     width: 24rem;
+
 }
-.email-control{
+.form {
     position:relative;
 }
-.email-control > #mail{
+.form-control{
+    position:relative;
+    top:1rem;
+}
+.form-control > #email{
     height:3rem;
     width:19rem;
     border-radius:50px 0 0 50px;
@@ -93,7 +98,7 @@ body{
     border:0.7px solid var(--Desaturated-Red);
 }
 
- .email-control input[type="submit"]{
+ .form > .submit > input[type="submit"]{
     height: 3rem;
     width: 5rem;
     border-radius: 25px;
@@ -102,13 +107,45 @@ body{
     border: none;
     cursor: pointer;
     position:absolute;
+    right: 0;
+    left: 18.5rem;
+    top: 1rem;
     box-shadow: 0 8px 30px 3px var(--Soft-Red);
-
-
 } 
-.email-control img{
+.form > .form-control > input:focus{
+    outline-color: none;
+    border: 1px solid var(--Desaturated-Red);
+    color:var(--Soft-Red);
+    font-size:15px;
+    font-weight:300;
+    font-family: 'Josefin Sans', sans-serif;
+}
+.form >.submit > .arrow{
     position:absolute;
-    top:16px;
+    top:2rem;
+    left:18.5rem;
     height:1rem;
     width:1rem;
+    cursor:pointer;
+}
+
+.form-control > .error-icon{
+    position: absolute;
+    right: 14rem;
+    top: 0.8rem;
+    visibility: hidden;
+}
+.form-control.error img.error-icon{
+    visibility:visible;
+}
+.form-control > p{
+    color:var(--Desaturated-Red);
+    font-size:15px;
+    visibility:hidden;
+    position:absolute;
+    top:3.8rem;
+    left:2rem;
+}
+.form-control.error > p{
+    visibility:visible;
 }
